# Spark_somya_TTS

./: .gitignore  README.md  client.py  main.py  pyproject.toml  requierments.txt  server.py
scripts/: analyze_dataset_filtering.py  analyze_dataset_pre_tokenization.py  codec_roundtrip_check.py  dataset_sanity.py  download_data.sh  download_rasa_dataset.py  extend_model.py  extend_tokenizer.py  extract_corpus.py  normalize_datasets_layout.py  text_processor.py  train.py  train_tokenizer.py  upload_to_hf.py  validate_extension.py
src/spark_tts/: config.py  text_processor.py
src/spark_tts/data/: __init__.py  dataset.py  tokenizer.py
src/spark_tts/inference/: __init__.py  generate.py
src/spark_tts/training/: __init__.py  trainer.py
