[project]
name = "spark-somya-tts"
version = "0.1.0"
description = "Spark-TTS training and inference for custom voice synthesis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.4.1",
    "huggingface-hub>=0.34.0",
    "librosa>=0.11.0",
    "numpy>=2.0.0",
    "soundfile>=0.13.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "trl>=0.22.2",
    "transformers>=4.56.2",
    "unsloth>=2026.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spark_tts"]
